Revert "1.19.3"
This reverts commit 548598ff38f68701e90390fc5897b8caf1ff07d4.