@@ -2,6 +2,7 @@ package dev.emi.emi;
 
 import java.util.List;
 import java.util.function.Predicate;
+import java.util.stream.Collectors;
 
 import com.google.common.collect.Lists;
 
@@ -9,9 +10,13 @@ import dev.emi.emi.api.stack.EmiStack;
 import dev.emi.emi.api.stack.FluidEmiStack;
 import it.unimi.dsi.fastutil.objects.Object2IntMap;
 import it.unimi.dsi.fastutil.objects.Object2IntOpenHashMap;
-import net.minecraft.client.MinecraftClient;
 import net.minecraft.fluid.Fluid;
-import net.minecraft.item.ItemGroups;
+import net.minecraft.item.Item;
+import net.minecraft.item.ItemGroup;
+import net.minecraft.item.ItemStack;
+import net.minecraft.item.Items;
+import net.minecraft.util.collection.DefaultedList;
+import net.minecraft.util.registry.Registry;
 
 public class EmiStackList {
 	public static List<Predicate<EmiStack>> invalidators = Lists.newArrayList();
@@ -26,11 +31,20 @@ public class EmiStackList {
 
 	public static void reload() {
 		List<EmiStack> stacks = Lists.newArrayList();
-		MinecraftClient client = MinecraftClient.getInstance();
-		ItemGroups.updateDisplayParameters(client.player.networkHandler.getEnabledFeatures(), false);
-		stacks.addAll(ItemGroups.getSearchGroup().getDisplayStacks().stream().map(EmiStack::of).toList());
-		for (int i = 0; i < EmiPort.getFluidRegistry().size(); i++) {
-			Fluid fluid = EmiPort.getFluidRegistry().get(i);
+		for (int i = 0; i < Registry.ITEM.size(); i++) {
+			Item item = Registry.ITEM.get(i);
+			if (item == Items.AIR) {
+				continue;
+			}
+			DefaultedList<ItemStack> itemStacks = DefaultedList.of();
+			item.appendStacks(ItemGroup.SEARCH, itemStacks);
+			stacks.addAll(itemStacks.stream().filter(s -> !s.isEmpty()).map(EmiStack::of).collect(Collectors.toList()));
+			if (itemStacks.isEmpty()) {
+				stacks.add(EmiStack.of(item));
+			}
+		}
+		for (int i = 0; i < Registry.FLUID.size(); i++) {
+			Fluid fluid = Registry.FLUID.get(i);
 			if (fluid.isStill(fluid.getDefaultState())) {
 				EmiStack fs = new FluidEmiStack(fluid);
 				try {
